manifests/watchtower/ntfy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: monitoring
  labels:
    app.kubernetes.io/name: ntfy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - name: http
      port: 8080
      targetPort: http
