manifests/watchtower/ntfy/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-http
  namespace: monitoring
spec:
  entryPoints: ["web"]
  routes:
    - kind: Rule
      match: Host(`ntfy.watchtower.local`)
      services:
        - name: ntfy
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-https
  namespace: monitoring
spec:
  entryPoints: ["websecure"]
  routes:
    - kind: Rule
      match: Host(`ntfy.watchtower.local`)
      services:
        - name: ntfy
          port: 8080
  tls: {}
